Code cleanup for namespace changes

--- a/JLT.Floorplan.App/Views/Account/Login.cshtml
+++ b/JLT.Floorplan.App/Views/Account/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model com.JLT.Entity.CurrentLogedInUser
+﻿@model JLT.Floorplan.Entity.CurrentLogedInUser
 @{
     Layout = null;
 }
@@ -57,7 +57,7 @@
   </div>
   <div class="text-center">
     <p>
-  <small class="text-muted">&copy; 2018 www.jlt.com. All Rights Reserved.</small>
+  <small class="text-muted">&copy; 2018 www.jlt. All Rights Reserved.</small>
 </p>
   </div>
 </div>
