--- a/JLT.Floorplan.App/Views/Manage/Employee.cshtml
+++ b/JLT.Floorplan.App/Views/Manage/Employee.cshtml
@@ -1,5 +1,5 @@
-﻿@using com.JLT.Common.Utility;
-@using com.JLT.Entity;
+﻿@using JLT.Common.Utility;
+@using JLT.Floorplan.Entity;
 @{    
     Layout = "~/Views/Shared/_Layout.cshtml";
     var authtoken = CommonUtility.LoggedInUser.authtoken;
