--- a/JLT.Floorplan.App/Views/Shared/_Layout.cshtml
+++ b/JLT.Floorplan.App/Views/Shared/_Layout.cshtml
@@ -1,10 +1,10 @@
 ﻿@{
-    var UserName = com.JLT.Common.Utility.CommonUtility.LoggedInUser.firstname + " " + com.JLT.Common.Utility.CommonUtility.LoggedInUser.lastname;
-    var UserId = com.JLT.Common.Utility.CommonUtility.LoggedInUser.id;
-    var UserRole = com.JLT.Common.Utility.CommonUtility.LoggedInUser.role;
-    var AdminRole = Convert.ToUInt64(com.JLT.Common.Utility.Enums.UserRoles.Admin);
-    var ProctorRole = Convert.ToUInt64(com.JLT.Common.Utility.Enums.UserRoles.Proctor);
-    var AuthRole = Convert.ToUInt64(com.JLT.Common.Utility.Enums.UserRoles.Authorizer);
+    var UserName = JLT.Common.Utility.CommonUtility.LoggedInUser.firstname + " " + JLT.Common.Utility.CommonUtility.LoggedInUser.lastname;
+    var UserId = JLT.Common.Utility.CommonUtility.LoggedInUser.id;
+    var UserRole = JLT.Common.Utility.CommonUtility.LoggedInUser.role;
+    var AdminRole = Convert.ToUInt64(JLT.Common.Utility.Enums.UserRoles.Admin);
+    var ProctorRole = Convert.ToUInt64(JLT.Common.Utility.Enums.UserRoles.Proctor);
+    var AuthRole = Convert.ToUInt64(JLT.Common.Utility.Enums.UserRoles.Authorizer);
 }
 
 <!DOCTYPE html>
@@ -97,7 +97,7 @@
                     <li class="dropdown">
                         <a href="#" data-toggle="dropdown" class="dropdown-toggle clear">
                             <span class="thumb-sm avatar pull-right m-t-n-sm m-b-n-sm m-l-sm">
-                                <img src="@Url.Content("~/img/" + com.JLT.Common.Utility.CommonUtility.LoggedInUser.profilepic)" alt="...">
+                                <img src="@Url.Content("~/img/" + JLT.Common.Utility.CommonUtility.LoggedInUser.profilepic)" alt="...">
                                 <i class="on md b-white bottom"></i>
                             </span>
                             <span class="hidden-sm hidden-md">@UserName</span> <b class="caret"></b>
@@ -152,7 +152,7 @@
                         <div class="dropdown wrapper">
                             <a href="@Url.Action("MyProfile", "Account")">
                                 <span class="thumb-lg w-auto-folded avatar m-t-sm">
-                                    <img src="@Url.Content("~/img/" + com.JLT.Common.Utility.CommonUtility.LoggedInUser.profilepic)" class="img-full" alt="...">
+                                    <img src="@Url.Content("~/img/" + JLT.Common.Utility.CommonUtility.LoggedInUser.profilepic)" class="img-full" alt="...">
                                 </span>
                             </a>
                             <a href="#" data-toggle="dropdown" class="dropdown-toggle hidden-folded">
