--- a/JLT.Floorplan.App/Views/Floorplan/Index.cshtml
+++ b/JLT.Floorplan.App/Views/Floorplan/Index.cshtml
@@ -1,4 +1,84 @@
 ﻿@{
     ViewBag.Title = "Index";
 }
+<link rel="stylesheet" href="@Url.Content("~/css/fp.css")" type="text/css" />
+<div id="holder">
+    <ul id="place"></ul>
+</div>
+<p style="clear:both"></p>
+@*<div style="text-align:center;overflow:auto">
+    <ul id="seatDescription">
+        <li style="background-color:#808080">Available Seat</li>
+        <li style="background-color:#ff6a00">Booked Seat</li>
+        <li style="background:#ffd800">Selected Seat</li>
+    </ul>
+</div>*@
 
+<script type="text/javascript">
+        $(function () {
+            var settings = {
+                rows: 18,
+                cols: 12,
+                rowCssPrefix: 'row-',
+                colCssPrefix: 'col-',
+                seatWidth: 35,
+                seatHeight: 35,
+                seatCss: 'seat',
+                selectedSeatCss: 'selectedSeat',
+				selectingSeatCss: 'selectingSeat'
+            };
+
+            var init = function (reservedSeat) {
+                var str = [], seatNo, className;
+                for (i = 0; i < settings.rows; i++) {
+                    for (j = 0; j < settings.cols; j++) {
+                        seatNo = (i + j * settings.rows + 1);
+                        className = settings.seatCss + ' ' + settings.rowCssPrefix + i.toString() + ' ' + settings.colCssPrefix + j.toString();
+                        if ($.isArray(reservedSeat) && $.inArray(seatNo, reservedSeat) != -1) {
+                            className += ' ' + settings.selectedSeatCss;
+                        }
+                        str.push('<li class="' + className + '"' +
+                                  'style="top:' + (i * settings.seatHeight).toString() + 'px;left:' + (j * settings.seatWidth).toString() + 'px">' +
+                                  '<a title="' + seatNo + '">' + seatNo + '</a>' +
+                                  '</li>');
+                    }
+                }
+                $('#place').html(str.join(''));
+            };
+
+            //case I: Show from starting
+            //init();
+
+            //Case II: If already booked
+            var bookedSeats = [5, 10, 25];
+            init(bookedSeats);
+
+
+            $('.' + settings.seatCss).click(function () {
+			if ($(this).hasClass(settings.selectedSeatCss)){
+				alert('This seat is already reserved');
+			}
+			else{
+                $(this).toggleClass(settings.selectingSeatCss);
+				}
+            });
+
+            $('#btnShow').click(function () {
+                var str = [];
+                $.each($('#place li.' + settings.selectedSeatCss + ' a, #place li.'+ settings.selectingSeatCss + ' a'), function (index, value) {
+                    str.push($(this).attr('title'));
+                });
+                alert(str.join(','));
+            })
+
+            $('#btnShowNew').click(function () {
+                var str = [], item;
+                $.each($('#place li.' + settings.selectingSeatCss + ' a'), function (index, value) {
+                    item = $(this).attr('title');
+                    str.push(item);
+                });
+                alert(str.join(','));
+            })
+        });
+
+</script>
