--- a/JLT.Floorplan.App/Views/Manage/Leave.cshtml
+++ b/JLT.Floorplan.App/Views/Manage/Leave.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
     var authtoken = CommonUtility.LoggedInUser.authtoken;
     var RestAPI = CommonUtility.GetAppSettingKey(Constants.ApplicationConfiguration.RestServiceURL);
-    var ExamEngineAPI = CommonUtility.GetAppSettingKey(Constants.ApplicationConfiguration.TestEngineAPIurl);
+    var ExamEngineAPI = "";
 }
 
 <div class="wrapper-md">
