--- a/JLT.Floorplan.App/Views/Shared/_Layout.cshtml
+++ b/JLT.Floorplan.App/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="@Url.Content("~/css/bootstrap-datetimepicker.css")" type="text/css" />
     <script src="@Url.Content("~/libs/jquery/jquery/dist/jquery.js")"></script>
     <script src="@Url.Content("~/libs/jquery/moment/moment.js")"></script>
-    <script src="@Url.Content("~/js/bootstrap-datetimepicker.js")"></script>  @*https://eonasdan.github.io/bootstrap-datetimepicker/*@
+    <script src="@Url.Content("~/js/bootstrap-datetimepicker.js")"></script> 
     <script>
         $(document).ready(function () {
             //$(".app").toggleClass("app-aside-folded", 10);
