--- a/JLT.Floorplan.App/Views/Manage/Users.cshtml
+++ b/JLT.Floorplan.App/Views/Manage/Users.cshtml
@@ -54,20 +54,21 @@
                     <div class="form-group" id="ug_Role">
                         <label class="col-sm-2 control-label required-star">User Role</label>
                        <div class="col-sm-10">
-                            <div class="checkbox">
-                                <label class="i-checks i-checks-sm">
-                                    <input type="checkbox" class="form-control" id="chkAdmin" name="role" value="15">
-                                    <i></i>Admin
-                                </label>
-                                <label class="i-checks i-checks-sm">
-                                    <input type="checkbox" class="form-control" id="chkAuth" name="role" value="17">
-                                    <i></i>Authorizer
-                                </label>
-                                <label class="i-checks i-checks-sm">
-                                    <input type="checkbox" class="form-control" id="chkProctor" name="role" value="33">
-                                    <i></i>Proctor
-                                </label>
-                            </div>
+                           <div class="checkbox">
+                               <label class="i-checks i-checks-sm">
+                                   <input type="checkbox" class="form-control" id="chkAdmin" name="role" value="15">
+                                   <i></i>Admin
+                               </label>
+                               <label class="i-checks i-checks-sm">
+                                   <input type="checkbox" class="form-control" id="chkProctor" name="role" value="33">
+                                   <i></i>Managers
+                               </label>
+                               <label class="i-checks i-checks-sm">
+                                   <input type="checkbox" class="form-control" id="chkAuth" name="role" value="17">
+                                   <i></i>Team Members
+                               </label>
+
+                           </div>
                         </div>
                     </div>
                     @*<div class="line line-dashed b-b line-lg pull-in"></div>*@
@@ -106,7 +107,7 @@
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="assignTestModalLabel">Assign Tests</h4>
+                    <h4 class="modal-title" id="assignTestModalLabel">Assign Seat</h4>
                 </div>
                 <form id="frm_assigntest" action="#" class="form-horizontal">
                 <input type="hidden" id="hdnUserId_assigntest" />
@@ -120,7 +121,7 @@
                     <div class="row m-t" id="div_tests">
                         <div class="col-xs-6 col-sm-4">
                             <div class="thumbnail bg-testlist cursor-pointer select-entity">
-                                    <span class="vertical-align-top">Hindi</span>
+                                    <span class="vertical-align-top">s1</span>
                             </div>
                         </div>
                     </div>
@@ -151,9 +152,8 @@
                 <span class="action-button" id="thumbnail_view" data-toggle="tooltip" data-placement="top" title="Thumbnail view"><i class="fa fa-th-large"></i></span>
                 <span class="action-button" id="sort_user_asc" data-toggle="tooltip" data-placement="top" title="Sort by name ascending"><i class="fa fa-sort-alpha-asc"></i></span>
                 <span class="action-button" id="sort_user_desc" data-toggle="tooltip" data-placement="top" title="Sort by name descending"><i class="fa fa-sort-alpha-desc"></i></span>
-                <span class="action-button" id="filter-admin-user" data-toggle="tooltip" data-placement="top" title="Filter admins"><i class="fa fa-user"></i></span>
-                <span class="action-button" id="filter-proctor-user" data-toggle="tooltip" data-placement="top" title="Filter proctors"><i class="fa fa-eye"></i></span>
-                <span class="action-button" id="filter-auth-user" data-toggle="tooltip" data-placement="top" title="Filter authorizers"><i class="fa fa-check"></i></span>
+                <span class="action-button" id="filter-admin-user" data-toggle="tooltip" data-placement="top" title="Filter admins"><i style="color:red" class="fa fa-user-md"></i></span>
+                <span class="action-button" id="filter-proctor-user" data-toggle="tooltip" data-placement="top" title="Filter Managers"><i style="color:blue" class="fa fa-user"></i></span>
                 <span class="action-button" id="filter-all-user" data-toggle="tooltip" data-placement="top" title="Show all users"><i class="fa fa-users"></i></span>
                 <input type="text" class="filter-user-text" id="txtFilterUser" placeholder="Filter users" />
             </div>
