--- a/JLT.Floorplan.App/css/fp.css
+++ b/JLT.Floorplan.App/css/fp.css
@@ -1,60 +1,112 @@
-﻿#holder {
-    height: 100%;
+﻿.front-indicator {
+    width:35%;
+    margin: 5px 15px 15px 32px;
+    background-color: #f6f6f6;
+    color: #adadad;
+    text-align: center;
+    padding: 3px;
+    border-radius: 5px;
+    border:1px solid grey;
+}
+
+.wrapper {
     width: 100%;
-    background-color: #F5F5F5;
-    border: 1px solid #A4A4A4;
-    text-align:center;
-    margin:0 auto;
-    overflow:visible;
+    text-align: center;
 }
 
-#place {
-    text-align:center;
+.container {
+    margin: 0 auto;
+    width: 100%;
+    text-align: center;
+}
+
+.booking-details {
+    float: left;
+    text-align: left;
+    margin-left: 35px;
+    font-size: 12px;
     position: relative;
-    margin: 10px;
+    height: 400px;
 }
 
-    #place a {
-        font-size: 12px;
-        color:#fff;
+    .booking-details h2 {
+        margin: 25px 0 20px 0;
+        font-size: 17px;
     }
 
-    #place li {
-        list-style: none outside none;
-        position: absolute;
+    .booking-details h3 {
+        margin: 5px 5px 0 0;
+        font-size: 14px;
     }
 
-        #place li:hover {
-            background-color: yellow;
-        }
-
-    #place .seat {
-        background-color: #808080;
-        height: 33px;
-        width: 33px;
-        display: block;
-    }
-
-    #place .selectedSeat {
-        background-color: #ff6a00;
-    }
-
-    #place .selectingSeat {
-        background-color: #ffd800;
-    }
-
-    #place .row-3, #place .row-4 {
-        margin-top: 10px;
-    }
-
-#seatDescription {
-    padding: 0px;
+div.seatCharts-cell {
+    color: #182C4E;
+    height: 25px;
+    width: 25px;
+    line-height: 25px;
 }
 
-    #seatDescription li {
-        vertical-align: middle;
-        list-style: none outside none;
-        padding-left: 35px;
-        height: 35px;
-        float: left;
+div.seatCharts-seat {
+    color: #FFFFFF;
+    cursor: pointer;
+}
+
+div.seatCharts-row {
+    height: 35px;
+}
+
+div.seatCharts-seat.available {
+    background-color: #B9DEA0;
+}
+
+    div.seatCharts-seat.available.first-class {
+        /* 	background: url(vip.png); */
+        background-color: #3a78c3;
     }
+
+div.seatCharts-seat.focused {
+    background-color: #76B474;
+}
+
+div.seatCharts-seat.selected {
+    background-color: #E6CAC4;
+}
+
+div.seatCharts-seat.unavailable {
+    background-color: #472B34;
+}
+
+div.seatCharts-container {
+    border-right: 1px dotted #adadad;
+    width: 80%;
+    padding: 20px;
+    float: left;
+}
+
+div.seatCharts-legend {
+    padding-left: 0px;
+    position: absolute;
+    bottom: 16px;
+}
+
+ul.seatCharts-legendList {
+    padding-left: 0px;
+}
+
+span.seatCharts-legendDescription {
+    margin-left: 5px;
+    line-height: 30px;
+}
+
+.checkout-button {
+    display: block;
+    margin: 10px 0;
+    font-size: 14px;
+}
+
+#selected-seats {
+    max-height: 90px;
+    overflow-y: scroll;
+    overflow-x: none;
+    width: 170px;
+}
