changed for floorplan js

--- a/JLT.Floorplan.App/Views/Account/MyProfile.cshtml
+++ b/JLT.Floorplan.App/Views/Account/MyProfile.cshtml
@@ -15,7 +15,7 @@
         <li role="presentation" class="active"><a href="#UpdatePersonalInfo" aria-controls="UpdatePersonalInfo" role="tab" data-toggle="tab">Update Personal Info</a></li>
         <li role="presentation"><a href="#changepassword" aria-controls="changepassword" role="tab" data-toggle="tab">Change Password</a></li>
         <li role="presentation"><a href="#changeprofilepic" aria-controls="changeprofilepic" role="tab" data-toggle="tab">Update Profile Pic</a></li>
-        <li role="presentation"><a href="#assignedtests" aria-controls="assignedtests" role="tab" data-toggle="tab">View Assigned Seat</a></li>
+        <li role="presentation"><a href="#assignedtests" aria-controls="assignedtests" role="tab" data-toggle="tab">My Seat</a></li>
     </ul>
     <!-- Tab panes -->
     <div class="tab-content">
