--- a/JLT.Floorplan.App/Views/Manage/Users.cshtml
+++ b/JLT.Floorplan.App/Views/Manage/Users.cshtml
@@ -240,7 +240,7 @@
                 var useractiondiv = $('<div>').addClass('user-action hide');
                 var editspan = $('<span>').addClass('m-l-xs m-r-xs edit-user').attr({ "data-toggle": "tooltip", "data-placement": "top", title: "Edit", "user_id": Users[i].id })
                             .html('<a onclick="return false;" data-target="#addUserModal" data-toggle="modal"><i class="glyphicon glyphicon-pencil"></i></a>');
-                var linkspan = $('<span>').addClass('m-l-xs m-r-xs link-user').attr({ "data-toggle": "tooltip", "data-placement": "top", title: "Assign tests", "user_id": Users[i].id })
+                var linkspan = $('<span>').addClass('m-l-xs m-r-xs link-user').attr({ "data-toggle": "tooltip", "data-placement": "top", title: "Assign floor plan", "user_id": Users[i].id })
                             .html('<a onclick="return false;" data-target="#assignTestModal" data-toggle="modal"><i class="fa fa-link"></i></a>');
                 useractiondiv.append(editspan)
                 useractiondiv.append(linkspan)
