--- a/JLT.Floorplan.App/Views/Floorplan/Index.cshtml
+++ b/JLT.Floorplan.App/Views/Floorplan/Index.cshtml
@@ -20,19 +20,19 @@
             <h2>Seat Details</h2>
 
             <h3> Selected Seats</h3>
-            <ul id="selected-seats">N/A</ul>
+            <ul id="selected-seats"></ul>
             <div style="width:100px">
                 <label class="col-sm-2 control-label">Date</label>
                 <div class="col-sm-10">
-                    <input ui-jq="daterangepicker" ui-options="{format: 'DD/MM/YYYY'}" class="form-control w-md active rounded">
+                    <input ui-jq="daterangepicker" id="daterange" ui-options="{format: 'DD/MM/YYYY'}" class="form-control w-md active rounded">
                 </div>
                 <div style="clear:both"></div>
                 <div style="width:150px">
                     <label class="col-sm-2 control-label">Employee#</label>
-                    <div class="col-sm-10"><input type="text" class="form-control rounded" /> </div>
+                    <div class="col-sm-10"><input id="employeeno" type="number" class="form-control rounded" /> </div>
                 </div><p style="clear:both"></p>
                 <div class="col-sm-10">
-                    <button class="btn btn-success">Allocate &raquo;</button>
+                    <button id="allocateseat" class="btn btn-success">Allocate &raquo;</button>
                 </div>
             </div>
 
@@ -44,100 +44,88 @@
 
 <script>
     var seats = [];
+    var booked = [];
     var apiurl = '@RestAPI';
     var seatmap = [];
     firstSeatLabel = 0;
     var previd = '';
     $(document).ready(function () {
         var AjaxCalls = {
-        GetSeats: function () {
-            var postData = {};
-            $.ajax({
-                url: apiurl + "Masters/Getseats",
-                type: "POST",
-                async: false,
-                crossDomain: true,
-                beforeSend: function (xhr) { xhr.setRequestHeader('Authorization', 'token ' + '@authtoken'); },
-                datatype: "json",
-                data: "=" + JSON.stringify(postData),
-                contentType: "application/x-www-form-urlencoded",
-                success: function (data) {
-                    //alert(data.body);
-                    seats = $.parseJSON(data.body);
-                    var row = 1;
-                    var col = 1;
-                    var e = '';
-                    $.each(seats, function (i, s) {
-                        if (s.row == row) {
-                            if (s.col == col)
-                                e = e + 'f[' + s.seatid + ',' + s.seatlabel + ']'
-                            else {
-                                for (var j = 0; j < (s.col - col); j++) {
-                                    e = e + '_';
+            GetSeats: function () {
+                var postData = {};
+                $.ajax({
+                    url: apiurl + "Masters/Getseats",
+                    type: "POST",
+                    async: false,
+                    crossDomain: true,
+                    beforeSend: function (xhr) { xhr.setRequestHeader('Authorization', 'token ' + '@authtoken'); },
+                    datatype: "json",
+                    data: "=" + JSON.stringify(postData),
+                    contentType: "application/x-www-form-urlencoded",
+                    success: function (data) {
+                        //alert(data.body);
+                        seats = $.parseJSON(data.body);
+                        var row = 1;
+                        var col = 1;
+                        var e = '';
+                        $.each(seats, function (i, s) {
+                            if (s.isbooked) booked.push(s.seatid);
+                            if (s.rowno == row) {
+                                if (s.columnno == col) {
+                                    e = e + 'f[' + s.seatid + ',' + s.seatlabel+ ']';
+                                }
+                                else {
+                                    for (var j = 0; j < (s.columnno - col); j++) {
+                                        e = e + '_';
+                                    }
+                                    e = e + 'f[' + s.seatid + ',' + s.seatlabel  +  ']';
+                                }
+                                col = s.columnno + 1;
+                            } else {
+                                seatmap.push(e);
+                                e = '';
+                                row = s.rowno;
+                                col = 1;
+                                if (s.rowno == row) {
+                                    if (s.columnno == col) {
+                                        e = e + 'f[' + s.seatid + ',' + s.seatlabel  + ']';
+                                    }
+                                    else {
+                                        for (var j = 0; j < (s.columnno - col); j++) {
+                                            e = e + '_';
+                                        }
+                                        e = e + 'f[' + s.seatid + ',' + s.seatlabel  + ']';
+                                    }
+                                    col = s.columnno + 1;
                                 }
                             }
-                            col++;
-                        } else {
-                            seatmap.push(e);
-                            e = '';
-                            row = s.row;
-                            col = 1;
-                        }
-                        //seatmap.push()
-                    });
-                },
-                error: function (xhr, ajaxOptions, thrownError) {
-                    var e = $.parseJSON(xhr.responseText);
-                    alert(e.message);
-                }
-            });
-        },
-    }
+                            //seatmap.push()
+                        });
+                    },
+                    error: function (xhr, ajaxOptions, thrownError) {
+                        var e = $.parseJSON(xhr.responseText);
+                        alert(e.message);
+                    }
+                });
+            },
+        }
 
         AjaxCalls.GetSeats();
         var $cart = $('#selected-seats'),
             $counter = $('#counter'),
             $total = $('#total'),
             sc = $('#seat-map').seatCharts({
-                map: [
-                    'f_ffff_________ffffff',
-                    '__ffff_________ffff__',
-                    'ffffff_________ffffff',
-                    'ffffff_________ffffff',
-                    'ffffff_________ffffff',
-                    '__ffff_________ffff__',
-                    '_fffff_________fffff_',
-                    'ffffff___ffff__ffffff',
-                    'ffffff___fffff_ffffff',
-                    'ffffff___fffff_ffffff',
-                    'ffffff___fffff_ffffff',
-                    '__ffff___fffff_ffff__',
-                    '_fffff_________fffff_',
-                    'ffffff_________ffffff',
-                    'ffffff_________ffffff',
-                    'ffffff_________ffffff',
-                    'ffffff_________ffffff',
-                    'ffffff_________ffffff',
-                    'ffffff_________ffffff',
-                    '__ffff_________ffff__',
-                    'ffffff_________ffff_f',
-                    'ffffff_________fff___',
-
-                ],
+                map: seatmap,
                 seats: {
                     f: {
                         classes: 'general-seat', //your custom CSS class
-                        category: ''
                     },
 
                 },
                 naming: {
                     top: false,
                     getLabel: function (character, row, column) {
-                        if (character == 'f') {
-                            firstSeatLabel = firstSeatLabel + 1;
-                            return seats[firstSeatLabel-1].seatlabel;
-                        }
+                       
                     },
                 },
                 legend: {
@@ -151,12 +139,12 @@
                     if (this.status() == 'available') {
                         $("#" + previd).toggleClass("selected available");
                         //let's create a new <li> which we'll add to the cart items
-                      var seat=  $('<li>' + this.data().category  + this.settings.label + '</b></li>')
+                        var seat = $('<li>' + this.settings.label + '</b></li>')
                             .attr('id', 'cart-item-' + this.settings.id)
-                            .data('seatId', this.settings.id)
+                            .attr('seatId', this.settings.id)
                         //.appendTo();
                         $cart.html(seat);
-                        previd =  this.settings.id;
+                        previd = this.settings.id;
                         /*
                          * Lets update the counter and total
                          *
@@ -168,7 +156,7 @@
                         return 'selected';
                     } else if (this.status() == 'selected') {
                         //update the counter
-                       // $counter.text(sc.find('selected').length - 1);
+                        // $counter.text(sc.find('selected').length - 1);
 
                         //remove the item from our cart
                         $('#cart-item-' + this.settings.id).remove();
@@ -191,8 +179,43 @@
         });
 
         //let's pretend some seats have already been booked
-        sc.get([ '4_1', '7_2']).status('unavailable');
+        sc.get(booked).status('unavailable');
 
+        $('#allocateseat').on('click', function () {
+            if ($('#employeeno').val() == ''  || $('#daterange').val()=='') {
+                alert('Please provide required fields!'); return
+            }
+            if ($('ul#selected-seats li:first').text() == '') {
+                alert('Please select seat!'); return
+            }
+
+            var model = {
+                seatno: $('ul#selected-seats li:first').attr('seatid'), startdate: $('#daterange').val().split(' - ')[0], enddate: $('#daterange').val().split(' - ')[1]
+                , employeeno: $('#employeeno').val()
+            };
+            $.ajax({
+                url: apiurl + "Masters/allocateseat",
+                type: "POST",
+                async: false,
+                crossDomain: true,
+                beforeSend: function (xhr) { xhr.setRequestHeader('Authorization', 'token ' + '@authtoken'); },
+                datatype: "json",
+                data: "=" + JSON.stringify(model),
+                contentType: "application/x-www-form-urlencoded",
+                success: function (data) {
+                    if (data.body == "1") {
+                        alert("seat allocated successfully!");
+                        location.reload();
+                    }
+                    //alert(data.body);
+
+                },
+                error: function (xhr, ajaxOptions, thrownError) {
+                    var e = $.parseJSON(xhr.responseText);
+                    alert(e.message);
+                }
+            });
+        });
     });
 
 </script>
